--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mmaze
-version = 0.1.1
+version = 0.1.2
 author = MorvanZhou
 author_email = mofanpy@hotmail.com
 description = Generating and solving maze
@@ -20,6 +20,15 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires =
+    dataclasses >= 0.8; python_version < "3.7"
 
 [options.packages.find]
 where = src
+
+[options.extras_require]
+test =
+    tox==3.24.3
+    build
+    twine
+    pylint
+    matplotlib>=3.3.4
