--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mmaze
-version = 0.1.2
+version = 0.1.3
 author = MorvanZhou
 author_email = mofanpy@hotmail.com
 description = Generating and solving maze
@@ -27,8 +27,10 @@ where = src
 
 [options.extras_require]
 test =
+    matplotlib>=3.3.4
+build =
     tox==3.24.3
     build
     twine
     pylint
-    matplotlib>=3.3.4
+
