--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/MorvanZhou/mmaze
 project_urls =
     Bug Tracker = https://github.com/MorvanZhou/mmaze/issues
+    Source=https://github.com/MorvanZhou/mmaze
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
