--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,4 @@ platform =
     mac: darwin
 commands =
     python -m pip install -e ".[test]"
-    python -m unittest discover -s tests -t . -p "*_test.py"
+    python -m unittest discover -s tests -t tests -p "*_test.py"
